# stepikwebserver

./: .gitignore  CMakeLists.txt  README.md  client_handler.cpp  client_handler.hpp  main.cpp  options.txt  parser.cpp  parser.hpp  reply.hpp  server  server.cpp  stringtreat.cpp  stringtreat.hpp
html/: index.html
src/: CMakeLists.txt  client.cpp
